<resources>
    <string name="app_name">TravelAgregatoralternative</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="side_menu_favourite">Избранное</string>
    <string name="side_menu_dream">Хочу быть там</string>
    <string name="side_menu_title">Travel Agregator</string>
    <string name="side_menu_main">Главная</string>


    <string name="label">Resort Plaza</string>
    <string name="description">Описание отеля </string>
    <string name="remove">Удалить</string>
    <string name="price">100 000 руб </string>
    <string name="text_view_tour">Выбери тур мечты </string>
    <string name="text_view_city">Город вылета </string>
    <string name="text_view_country">Страна</string>
    <string name="text_view_people">Туристы </string>
    <string name="text_view_nights">Ночей </string>
    <string name="text_view_date">Дата начала </string>
    <string name="rating">Укажите звездность</string>
    <string name="find_tour">Найти </string>
    <string name="people_hint">Взрослых: </string>


    <string name="text_countries">Список стран</string>
    <string name="text_dreams">Хочу в ...</string>
    <string name="text_country">Испания</string>
    <string name="text_country2">Португалия</string>
    <string name="text_country3">Тайланд</string>
    <string name="text_country4">Мексика</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="Complete">Успешно</string>
    <string name="Error">Ошибка</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
