<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_fr"
android:layout_width="match_parent"
android:layout_height="match_parent"
app:layout_behavior="@string/appbar_scrolling_view_behavior">

<!--<ScrollView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/text_view_tour"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="13dp"
        android:text="@string/text_view_city"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large" />

<Spinner
    android:id="@+id/spinner_flight_city"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
       android:layout_below="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/spinner_flight_city"
        android:text="@string/text_view_country"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large" />

    <Spinner
        android:id="@+id/spinner_countries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3" />

    <EditText
        android:id="@+id/edit_date"
        style="@android:style/Widget.Material.Light.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/spinner_countries"
        android:hint="@string/text_view_date" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/spinner_countries"
        android:layout_marginEnd="32dp"
        android:text="@string/text_view_nights"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edit_date"
        android:layout_below="@+id/edit_date"
        android:layout_marginTop="93dp"
        android:text="@string/text_view_people"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignEnd="@+id/textView5"
        android:text="@string/rating"
        android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large" />

<RatingBar
    android:id="@+id/ratingBar"
    style="@style/Widget.AppCompat.RatingBar.Small"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignEnd="@+id/textView"
    android:layout_below="@+id/textView7"
    android:layout_marginEnd="15dp" />

<Button

    android:id="@+id/button_find"
    style="@android:style/Widget.Material.Button.Borderless"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/ratingBar"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="57dp"
    android:background="@android:color/holo_orange_light"
    android:text="@string/find_tour" />
<!--</ScrollView>-->

</RelativeLayout>
